02: se agregó secciones en <body>

--- a/Libro/Cap1.html
+++ b/Libro/Cap1.html
@@ -1,11 +1,28 @@
 <!DOCTYPE HTML5>
 <html lang="es">
     <head>
+        <meta charset="utf-8" />
         <meta name="description" content="Actividades del libro de HTML5, CSS3 y JS" />
         <meta name="keywords" content="HTML5, CSS3, JS, JAVASCRIPT, LIBRO, PDF" />
         <title> Actividades de Libro. </title>
+        <!-- <link rel="stylesheet" href="misestilos.css"> -->
+        <!-- links para JS -->
     </head>
     <body>
+        <header style="font-size: 38px">
+            <h1 style="text-align: center">Página Principal</h1>
+        </header>
+        <nav style="font-size: 32px; padding-bottom: 30px; text-align: center">
+            <b style="padding-right: 20px;">Inicio</b> | <b style="padding-left: 20px; padding-right: 20px">Fotos</b>  | <b style="padding-left: 20px">Videos</b> 
+        </nav>
+        <section>
 
+        </section>
+        <aside>
+
+        </aside>
+        <footer>
+
+        </footer>
     </body>
 </html>
