--- a/Libro/Primer_Trad_Box/TraditionalBox.html
+++ b/Libro/Primer_Trad_Box/TraditionalBox.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Plantilla de estilo Caja Tradicional." />
         <meta name="keywords" content="html, css, traditional, box, primer" />
         <title>Primer</title>
-        <link rel="stylesheet" href="myStyle.css" />
+        <link rel="stylesheet" type="text/css" href="myStyle.css" />
         <!--scripting js-->
     </head>
     <body>
